--- a/map/templates/index.html
+++ b/map/templates/index.html
@@ -2,27 +2,99 @@
 <html lang="en"></html>
 <head>
     <title>Home</title>
+
     <script>
+        var map;
+        var directionsService;
+        var directionsRenderer;
+        // Map initialization
         function initMap() {
             var mapProp = {
+                // map coordinates
                 center: new google.maps.LatLng(53.3472, -6.2592),
-                zoom: 14,
+                zoom: 12,
             };
-            var map = new google.maps.Map(document.getElementById("map"), mapProp);
+            map = new google.maps.Map(document.getElementById("map"), mapProp);
+            directionsService = new google.maps.DirectionsService();
+            directionsRenderer = new google.maps.DirectionsRenderer();
+            // Bus stop option initialization
+            initBusStops();
         }
     </script>
 
     <script>
-        function markBikeStation(){
-            fetch("bikestation", {
-                method:'GET'}).then(response => {
-                console.log("response:",response.json())
-                return reponse.json();
-            }).then(data => {
-                console.log("data:", data)           
-            }).catch(err => {
-                console.log("opps", err);
-            })
+        var busStops;
+        function initBusStops(){
+            // read bus station data from server
+            fetch("busstation", {
+                method:'GET'}).then(function(response) {
+                    return response.json();
+                })
+            .then(function(busData) {
+                // create bus station option 
+                var startStop = document.getElementById('start_stop');
+                var endStop = document.getElementById('end_stop');
+                var str= "";
+                var count = 0;
+                busData.forEach(element => {
+                    // log shows all bus station 
+                    // console.log(element.stop_name);
+                    var startOption=document.createElement("option")
+                    startOption.setAttribute("value",element.stop_name);
+                    startStop.appendChild(startOption);
+                    var endOption=document.createElement("option")
+                    endOption.setAttribute("value",element.stop_name);
+                    endStop.appendChild(endOption);
+                });
+                console.log(busData);
+            });
+        }
+    </script>
+
+    <script>
+        // Submit the starting and ending stations and return to the navigation route
+        function markBusStation( ){
+            var start = document.forms["bus_stop"]["start_stop"].value;
+            console.log(start);
+            var end = document.forms["bus_stop"]["end_stop"].value;
+            console.log(end);
+            let url = 'route/'+'?start_stop='+start+'&end_stop='+end;
+            console.log(url);
+            fetch(url, {
+                method:'GET'}).then(function(response) {
+                    return response.json();
+                })
+            .then(function(routeDate){
+                console.log(routeDate);
+                //map clear
+                var mapProp = {
+                    center: new google.maps.LatLng(53.3472, -6.2592),
+                    zoom: 12,
+                };
+                map = new google.maps.Map(document.getElementById("map"), mapProp);
+                
+                directionsRenderer.setMap(map);
+                directionsRenderer.setPanel(document.getElementById("sidebar"));
+                var start_position = new google.maps.LatLng(routeDate[0].stop_lat, routeDate[0].stop_long);
+                var end_position = new google.maps.LatLng(routeDate[1].stop_lat, routeDate[1].stop_long);
+                var request = {
+                    origin: start_position,
+                    destination: end_position,
+                    travelMode: google.maps.TravelMode["TRANSIT"],
+                    provideRouteAlternatives :true,
+                    transitOptions: {
+                        modes: ['BUS'],
+                    },
+
+                };
+                directionsService.route(request, function(response, status) {
+                    if (status == 'OK') {
+                        console.log(response);
+                        directionsRenderer.setDirections(response);
+
+                    }
+                });
+            });
         }
     </script>
 
@@ -37,7 +109,7 @@
         script.async = true;
         script.charset = "utf-8";
         script.src = "//openweathermap.org/themes/openweathermap/assets/vendor/owm/js/weather-widget-generator.js";
-        var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(script, s);  })();
+        var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(script, s);})();
     </script>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBHY3W-xvNE-42BipvMY_-lu4aKdnB5xn4&callback=initMap&libraries=&v=weekly" async>
@@ -46,11 +118,17 @@
 
 <body>
     <div id="openweathermap-widget-11" style="width:1920px;"></div>
-    <!-- <form action = "/map/bikestation" method="GET" onsubmit="return markBikeStation()"></form> -->
-    <form onsubmit="return markBikeStation()">
-        <input type="submit" value="bike station" style="height: 3em; margin: 0.5em;"> 
+    <form action="route/" name = "bus_stop" onsubmit="return markBusStation()">
+        <input list="start_stop" name="start_stop" placeholder="From" />
+        <datalist id="start_stop"></datalist>
+        <input list="end_stop" name="end_stop" placeholder="To" />
+        <datalist id="end_stop"></datalist>
+        <input type="button" onclick="return markBusStation()" value="submit" style="height: 3em; margin: 0.5em;"> 
     </form>
-    <div id="map" style="width:1020px;height:680px;"></div>
+    <div id="container">
+        <div id="map" style="width:1020px;height:680px;"></div>
+        <div id="sidebar"></div>
+    </div>
 </body>
 
 </html>
